<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp"
        tools:context=".Staggered.StaggeredActivity">

    <TextView
            android:id="@+id/tv_title_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/popular"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/iv_to_home"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:src="@drawable/ic_home" />

    <HorizontalScrollView
            android:id="@+id/sv_cate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_popular"
            android:layout_marginTop="@dimen/_4sdp"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/expensive"
                    android:textColor="@android:color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/swim"
                    android:textColor="@android:color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/near"
                    android:textColor="@android:color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/rate"
                    android:textColor="@android:color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/boutique"
                    android:textColor="@android:color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/motel"
                    android:textColor="@android:color/white" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_staggered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sv_cate"
            android:layout_marginTop="@dimen/_8sdp" />

</RelativeLayout>